# Benifitscompliance

./: .gitignore  netlify.toml  package-lock.json  package.json
apps/api/: main.py  pyproject.toml
apps/api/agents/: __init__.py  anomaly_detector.py  compliance.py  connector.py  normalizer.py
apps/api/db/: schema.sql
apps/api/routes/: __init__.py  admin.py  audit.py  clients.py  compliance.py  documents.py  employees.py  forms.py  integrations.py  notifications.py  pipeline.py  reports.py  self_insured.py  webhooks.py
apps/api/services/: hris_integration.py  pdf_generator.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/workflow-builder/: page.tsx
apps/web/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
apps/web/src/components/actions/: QuickActions.tsx  index.ts
apps/web/src/components/activity/: ActivityFeed.tsx  index.ts
apps/web/src/components/admin/: AdminDashboard.tsx  AuditLogViewer.tsx  ClientPortfolioDashboard.tsx  MultiTenantManager.tsx  OrganizationSettings.tsx  RoleManager.tsx  RolePermissionsManager.tsx  SystemHealthDashboard.tsx  TenantManager.tsx  UserManagement.tsx  index.ts
apps/web/src/components/ai/: AIAssistantChat.tsx  AIAssistantPanel.tsx  AIComplianceAssistant.tsx  AIInsightsEngine.tsx  AIInsightsPanel.tsx  index.ts  (+5 more)
apps/web/src/context/: AppContext.tsx  ComplianceContext.tsx  index.ts
apps/web/src/hooks/: index.ts  useKeyboardShortcut.ts  useMediaQuery.ts  useUtilities.ts
(+245 files in other folders)
